add dashboard swagger
