# internal/app/p2m_api/gen/api/service.types.go
@@ -3,6 +3,12 @@
 // Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.3.0 DO NOT EDIT.
 package p2m_api
 
+import (
+	"time"
+
+	openapi_types "github.com/oapi-codegen/runtime/types"
+)
+
 const (
 	BearerAuthScopes = "BearerAuth.Scopes"
 )
@@ -110,6 +116,20 @@ type CreateUserBody struct {
 
 // CreatedBy defines model for CreatedBy.
 type CreatedBy string
+
+// DashboardResponse defines model for DashboardResponse.
+type DashboardResponse struct {
+	ClientId           string              `json:"client_id"`
+	Date               *openapi_types.Date `json:"date,omitempty"`
+	EditingStyle       string              `json:"editing_style"`
+	EditorName         string              `json:"editor_name"`
+	NumOfMultipleImage int32               `json:"num_of_multiple_image"`
+	NumOfSingleImage   int32               `json:"num_of_single_image"`
+	QcName             string              `json:"qc_name"`
+	Status             Status              `json:"status"`
+	TicketId           int64               `json:"ticket_id"`
+	Title              string              `json:"title"`
+}
 
 // Error defines model for Error.
 type Error struct {
@@ -316,6 +336,21 @@ type InternalUpdateCommentParams struct {
 // InternalRemoveCommentParams defines parameters for InternalRemoveComment.
 type InternalRemoveCommentParams struct {
 	XRequestId string `json:"X-Request-Id"`
+}
+
+// InternalGetDailyDashboardParams defines parameters for InternalGetDailyDashboard.
+type InternalGetDailyDashboardParams struct {
+	// Date date
+	Date openapi_types.Date `form:"date" json:"date"`
+}
+
+// InternalExportDashboardParams defines parameters for InternalExportDashboard.
+type InternalExportDashboardParams struct {
+	// StartTime date
+	StartTime time.Time `form:"start_time" json:"start_time"`
+
+	// EndTime date
+	EndTime time.Time `form:"end_time" json:"end_time"`
 }
 
 // InternalCreateLinkParams defines parameters for InternalCreateLink.
