# internal/pkg/handler/dashboards.go
@@ -1,0 +1,29 @@
+package handler
+
+import (
+	p2m_api "github.com/Haevnen/p2m_be/internal/app/p2m_api/gen/api"
+	"github.com/Haevnen/p2m_be/internal/pkg/registry"
+	"github.com/Haevnen/p2m_be/internal/pkg/registry/interactorinterface"
+	"github.com/gin-gonic/gin"
+)
+
+type dashboardHandler struct {
+	dashboardInteractor interactorinterface.DashboardInterface
+}
+
+func newDashboardHandler(registry *registry.Registry) dashboardHandler {
+	return dashboardHandler{
+		dashboardInteractor: registry.DashboardInterface(),
+	}
+}
+
+// (GET /dashboards/daily)
+func (h dashboardHandler) InternalGetDailyDashboard(c *gin.Context, params p2m_api.InternalGetDailyDashboardParams) {
+
+}
+
+// Get timerange dashboard
+// (GET /dashboards/export)
+func (h dashboardHandler) InternalExportDashboard(c *gin.Context, params p2m_api.InternalExportDashboardParams) {
+
+}
